--- a/realizacao.html
+++ b/realizacao.html
@@ -706,7 +706,7 @@
                     })
                     .catch(error => {
                         console.error('Erro de rede ao enviar o formulário:', error);
-                        mensagemStatus.textContent = 'Ocorreu um erro ao enviar. Verifique sua conexão e tente novamente.';
+                        mensagemStatus.textContent = 'Ocorreu um erro ao enviar. Verifique sua conexão e tente novamente';
                         mensagemStatus.className = 'erro';
                         formRealizacao.style.display = 'block'; 
                     });
