--- a/realizacao.html
+++ b/realizacao.html
@@ -294,7 +294,7 @@
                     <option value="" disabled selected></option>
                     <option value="outro_casa_apostas">Outro</option>
                 </select>
-                <input type="text" id="outra_casa_apostas_input" name="outra_casa_apostas_input" class="dynamic-input" placeholder="Digite a nova casa" style="display: none;">
+                <input type="text" id="outra_casa_apostas_input" name="outra_casa_apostas_input" class="dynamic-input" style="display: none;">
             </div>
 
             <div class="form-group">
@@ -303,7 +303,7 @@
                     <option value="" disabled selected></option>
                     <option value="outro_campeonato">Outro</option>
                 </select>
-                <input type="text" id="outro_campeonato_input" name="outro_campeonato_input" class="dynamic-input" placeholder="Digite o nome do campeonato" style="display: none;">
+                <input type="text" id="outro_campeonato_input" name="outro_campeonato_input" class="dynamic-input" style="display: none;">
             </div>
             
             <div class="form-group">
@@ -312,7 +312,7 @@
                     <option value="" disabled selected></option>
                     <option value="outro_perfil_partida">Outro</option>
                 </select>
-                <input type="text" id="outro_perfil_partida_input" name="outro_perfil_partida_input" class="dynamic-input" placeholder="Digite o novo perfil" style="display: none;">
+                <input type="text" id="outro_perfil_partida_input" name="outro_perfil_partida_input" class="dynamic-input" style="display: none;">
             </div>
 
             <div class="form-group">
@@ -321,7 +321,7 @@
                     <option value="" disabled selected></option>
                     <option value="outro_home_team_reordered">Outro</option>
                 </select>
-                <input type="text" id="outro_home_team_reordered_input" name="outro_home_team_reordered_input" class="dynamic-input" placeholder="Digite o nome da equipe" style="display: none;">
+                <input type="text" id="outro_home_team_reordered_input" name="outro_home_team_reordered_input" class="dynamic-input" style="display: none;">
             </div>
 
             <div class="form-group">
@@ -330,7 +330,7 @@
                     <option value="" disabled selected></option>
                     <option value="outro_away_team_reordered">Outro</option>
                 </select>
-                <input type="text" id="outro_away_team_reordered_input" name="outro_away_team_reordered_input" class="dynamic-input" placeholder="Digite o nome da equipe" style="display: none;">
+                <input type="text" id="outro_away_team_reordered_input" name="outro_away_team_reordered_input" class="dynamic-input" style="display: none;">
             </div>
 
             <div class="form-group">
@@ -339,7 +339,7 @@
                     <option value="" disabled selected></option>
                     <option value="outro_stake">Outro</option>
                 </select>
-                <input type="number" id="outra_stake_input" name="outra_stake_input" class="dynamic-input" placeholder="Digite o valor numérico (ex: 3.5)" step="0.1" style="display: none;">
+                <input type="number" id="outra_stake_input" name="outra_stake_input" class="dynamic-input" step="0.1" style="display: none;">
             </div>
 
             <fieldset id="mercados_explorados_fieldset_realizacao" class="main-fieldset">
