--- a/validacao.html
+++ b/validacao.html
@@ -72,7 +72,7 @@
                     <option value="" disabled selected></option>
                     <option value="outro_referencia_realizacao">Outro</option>
                 </select>
-                <input type="text" id="outra_referencia_realizacao_input" name="outra_referencia_realizacao_input" class="dynamic-input" placeholder="Digite a nova referência" style="display: none;">
+                <input type="text" id="outra_referencia_realizacao_input" name="outra_referencia_realizacao_input" class="dynamic-input" style="display: none;">
             </div>
 
             <div class="form-group">
@@ -81,12 +81,12 @@
             </div>
 
             <div class="form-group">
-                <label for="estrategia_select_val">Estratégia Utilizada</label>
+                <label for="estrategia_select_val">Estratégia</label>
                 <select id="estrategia_select_val" name="estrategia_select_val" required>
                     <option value="" disabled selected></option>
                     <option value="outro_estrategia_val">Outro</option>
                 </select>
-                <input type="text" id="outra_estrategia_val_input" name="outra_estrategia_val_input" class="dynamic-input" placeholder="Digite a nova estratégia" style="display: none;">
+                <input type="text" id="outra_estrategia_val_input" name="outra_estrategia_val_input" class="dynamic-input" style="display: none;">
             </div>
 
             <div class="form-group">
@@ -95,7 +95,7 @@
                      <option value="" disabled selected></option>
                      <option value="outro_esporte_val">Outro</option>
                 </select>
-                <input type="text" id="outro_esporte_val_input" name="outro_esporte_val_input" class="dynamic-input" placeholder="Digite o novo esporte" style="display: none;">
+                <input type="text" id="outro_esporte_val_input" name="outro_esporte_val_input" class="dynamic-input" style="display: none;">
             </div>
 
             <fieldset id="avaliacao_resultados_fieldset" class="main-fieldset">
