--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <div class="container">
         <h1>Bet</h1>
-        <a href="realizacao.html" class="button">Registro de Operação</a>
-        <a href="validacao.html" class="button">Validação de Operação</a>
-        <a href="calculadora.html" class="button">Cálculos e Predições</a>
+        <a href="realizacao" class="button">Registro de Operação</a>
+        <a href="validacao" class="button">Validação de Operação</a>
+        <a href="calculadora" class="button">Cálculos e Predições</a>
     </div>
 </body>
 </html>
