--- a/calculadora.html
+++ b/calculadora.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Suíte de Análise Preditiva e Gestão (v6.3)</title>
+    <title>Calculadoras e Predição</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBbRMgIBPBTcPXAa00KYfx管ZTCMrTGccw4iSdBNNWY=" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
         body {font-family: "Times New Roman", serif; background-color: #07251F; color: #EAF9E1; margin: 10px; padding: 10px;}
