--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <a href="realizacao.html" class="button">Registro de Operação</a>
         <a href="validacao.html" class="button">Validação de Operação</a>
         <a href="calculadora.html" class="button">Cálculos e Predições</a>
-        commit: {{ site.github.latest_commit_hash | slice: 0, 7 }}
+    <div id="version-info">
+      commit: {{ site.github.latest_commit_hash | slice: 0, 7 }}
+    </div>
     </div>
 </body>
 </html>
