--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="validacao.html" class="button">Validação de Operação</a>
         <a href="calculadora.html" class="button">Cálculos e Predições</a>
     <div id="version-info">
-      commit: {{ site.github.latest_commit_hash | slice: 0, 7 }}
+      version: {{ site.github.latest_commit_hash | slice: 0, 7 }}
     </div>
     </div>
 </body>
