--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         <a href="realizacao.html" class="button">Registro de Operação</a>
         <a href="validacao.html" class="button">Validação de Operação</a>
         <a href="calculadora.html" class="button">Cálculos e Predições</a>
-    <div id="version-info">
-      version: {{ site.github.latest_commit_hash | slice: 0, 7 }}
-    </div>
+        <div id="version-info">%%VERSION%%</div>
     </div>
 </body>
 </html>
