--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ferramentas de Análise</title>
+    <title>Bet Control</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <style>
         /* --- CONFIGURAÇÕES GERAIS --- */
@@ -150,7 +150,7 @@
 <body>
 
     <div class="section-container">
-        <h1>⚽ Bet Control</h1>
+        <h1>⚽ Ferramentas de Análise</h1>
         <ul class="link-list">
             <li><a href="calculadora.html" class="action-item action-item--primary">Cálculos e Predições</a></li>
             <li><a href="realizacao.html" class="action-item action-item--primary">Registro de Operação</a></li>
