--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             <li><a href="calculadora.html" class="action-item action-item--primary">Cálculos e Predições</a></li>
             <li><a href="realizacao.html" class="action-item action-item--primary">Registro de Operação</a></li>
             <li><a href="validacao.html" class="action-item action-item--primary">Validação de Operação</a></li>
+            <li><a href="escopo.html" class="action-item action-item--primary">Teste</a></li>
         </ul>
     </div>
 
