--- a/index.html
+++ b/index.html
@@ -152,10 +152,11 @@
     <div class="section-container">
         <h1>⚽ Ferramentas de Análise</h1>
         <ul class="link-list">
-            <li><a href="calculadora.html" class="action-item action-item--primary">Cálculos e Predições</a></li>
             <li><a href="realizacao.html" class="action-item action-item--primary">Registro de Operação</a></li>
             <li><a href="validacao.html" class="action-item action-item--primary">Validação de Operação</a></li>
-            <li><a href="escopo.html" class="action-item action-item--primary">Teste</a></li>
+            <li><a href="calculadora.html" class="action-item action-item--primary">Calculadoras</a></li>
+            <li><a href="escopo.html" class="action-item action-item--primary">Análise H2H</a></li>
+            <li><a href="escopo.html" class="action-item action-item--primary">Análise Equipe</a></li>
         </ul>
     </div>
 
