--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             <li><a href="realizacao.html" class="action-item action-item--primary">Registro de Operação</a></li>
             <li><a href="validacao.html" class="action-item action-item--primary">Validação de Operação</a></li>
             <li><a href="calculadora.html" class="action-item action-item--primary">Calculadoras</a></li>
-            <li><a href="escopo.html" class="action-item action-item--primary">Análise H2H</a></li>
-            <li><a href="escopo.html" class="action-item action-item--primary">Análise Equipe</a></li>
+            <li><a href="escopo.html" class="action-item action-item--primary">Análise Partidas</a></li>
+            <li><a href="rant.html" class="action-item action-item--primary">Análise Ranto</a></li>
         </ul>
     </div>
 
